--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prohome Admin Panel</title>
+    <script>
+      // Dark mode
+      window.addEventListener("load", () => {
+        if (localStorage.getItem("theme") === "dark") {
+          document.documentElement.classList.add("dark");
+        }
+      });
+    </script>
   </head>
   <body>
     <div id="root"></div>
